# ugtrain

./: .gitignore  .travis.yml  AUTHORS  CONTRIBUTING.md  CONTRIBUTORS.md  ChangeLog  Makefile.am  README  README.md  README_qanda.md  TODO  autogen.sh  configure.ac  configure.in
debian/: changelog  control  rules
debian_harmattan/: changelog  control  ugtrain.aegis
debian_pc/: changelog  control  copyright  rules  ugtrain.docs
doc/: 0_000.dump  0_000_hig.dump.txt  0_000~.dump  0_000~.dump.txt  ugtrain-dynmem.md  ugtrain-dynmem.txt  ugtrain-statmem.md  ugtrain-statmem.txt
drawings/: README  libmemhack.odg  libmemhack_memory.odg
examples/: README  README.md  chromium-bsu32.conf  chromium-bsu64.conf  dangerdeep64.conf  sauerbraten32.conf  sauerbraten64.conf  supertux32.conf  supertux64.conf  warzone2100-32.conf  warzone2100-64.conf  warzone2100_238-32.conf  warzone2100_238-64.conf  warzone2100_300-32.conf  warzone2100_300-64.conf  warzone2100_321-64.conf
examples/adapt/: _common_adapt.sh  chromium-bsu_adapt32.sh  chromium-bsu_adapt64.sh  dangerdeep_adapt64.sh  sauerbraten_adapt32.sh  sauerbraten_adapt64.sh  supertux_adapt64.sh  warzone2100_adapt32.sh  warzone2100_adapt64.sh
examples/incomplete/: alien-arena64.conf  assaultcube64.conf  bloodfrontier64.conf  bofh64.conf  btanks64.conf  chromium-bsu64_pointer-pie.conf  chromium-bsu64_pointer.conf  dunelegacy64.conf  endless-sky64.conf  freedoom1-64.conf  freedoom2-64.conf  gnome-mines64.conf  supertux32.conf  supertux64.conf  wesnoth64.conf
examples/raspberrypi/: mini-sub.conf
extra/: ugtrain
libgcheater/: Makefile.am  libgcheater.c  libgcheater.h
linuxhooking/: Makefile.am  libmemdisc.c  libmemhack.c  ugpreload.c
linuxhooking/examples/: chromium-bsu_adapt32.sh  chromium-bsu_adapt64.sh  chromium-bsu_disc32.sh  chromium-bsu_disc64.sh  chromium-bsu_hack32.sh  chromium-bsu_hack64.sh
scanmem_extension/: 001_dumparr_r251.patch  patch_scanmem.sh
src/: Makefile.am  adapt.cpp  adapt.h  adaption.cpp  adaption.h  aslr.cpp  aslr.h  cfgentry.h  cfgoutput.cpp  cfgoutput.h  cfgparser.cpp  cfgparser.h  common.cpp  common.h  commont.cpp  control.cpp  control.h  discovery.cpp  discovery.h  dump.cpp  dump.h  fifoparser.cpp  fifoparser.h  getch.h  getch_l.c  getch_w.c  maps.h  maps_l.cpp  memattach.h  memattach_l.c  memattach_w.c  memmgmt.cpp  memmgmt.h  options.c  options.cpp  options.h  parser.cpp  parser.h  preload.h  preload_l.c  (+10 more)
src/bash_completion/: ugtrain
src/lib/: getch.h  getch_l.c  getch_w.c  list.h  maps.h  maps_l.c  maps_l.cpp  maps_w.c  mapscb_l.cpp  memattach.h  memattach_l.c  memattach_l.h  memattach_w.c  memattach_w.h  preload.h  preload_l.c  system.h  system_l.c  system_w.c  types.h
src/linuxhooking/: Makefile.am  libcommon.c  libcommon.h  libmemdisc.c  libmemhack.c  libprivacy.c  list.h  memhooks.c  nethooks.c  ugpreload.c
src/linuxhooking/examples/: chromium-bsu_adapt32.sh  chromium-bsu_adapt64.sh  chromium-bsu_disc64.sh  chromium-bsu_hack32.sh  chromium-bsu_hack64.sh
src/tools/: Makefile.am  ugptrfind.c  ugsimfind.c  ugstackdisc.c
tools/: Makefile.am  ugsimfind.c
