bin_PROGRAMS = ugptrfind ugsimfind ugstackdisc

ugptrfind_SOURCES = ugptrfind.c

ugptrfind_LDADD = $(DEPS_LIBS)

ugsimfind_SOURCES = ugsimfind.c

ugsimfind_LDADD = $(DEPS_LIBS)

ugstackdisc_SOURCES = ugstackdisc.c \
                      ../lib/maps_l.c

ugstackdisc_LDADD = $(DEPS_LIBS)

AM_CFLAGS = -Wall -I ..
